Rem bottom border and linked sd.com

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
   </div>
   <div class="w-container">
-    <div class="credits">Designed by Samuel Dowd. Icons courtesy of Zurb.</div>
+    <div class="credits">Designed by <a href="http://www.samueldowd.com">Samuel Dowd</a>. Icons courtesy of Zurb.</div>
   </div>
 </body>
 </html>
