Fixed the business card sign at all widths

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <br>Saturday: 9:00 AM - 7:00 PM
             <br>Sunday: Closed</p>
           <div class="w-row">
-            <div class="w-col w-col-4"><a class="w-inline-block social-link-block" href="http://www.yelp.com/biz/a-barber-shop-watertown" target="_blank"><h4 class="social-name">Yelp</h4><p class="color-social-icon fi-social-yelp" id="yelp" alt="yelp"></p></a>
+            <div class="w-col w-col-4 social-link-dec"><a class="w-inline-block social-link-block" href="http://www.yelp.com/biz/a-barber-shop-watertown" target="_blank"><h4 class="social-name">Yelp:</h4><p class="color-social-icon fi-social-yelp" id="yelp" alt="yelp"></p></a>
             </div>
-            <div class="w-col w-col-4"><a class="w-inline-block social-link-block" href="https://plus.google.com/101310234248823468926/about" target="_blank"><h4 class="social-name">Facebook</h4><p class="color-social-icon fi-social-facebook" id="facebook" alt="Facebook"></p></a>
+            <div class="w-col w-col-4 social-link-dec"><a class="w-inline-block social-link-block" href="https://plus.google.com/101310234248823468926/about" target="_blank"><h4 class="social-name">Facebook:</h4><p class="color-social-icon fi-social-facebook" id="facebook" alt="Facebook"></p></a>
             </div>
-            <div class="w-col w-col-4"><a class="w-inline-block social-link-block" href="https://www.facebook.com/pages/A-Barber-Shop/285800824854910" target="_blank"><h4 class="social-name">Google+</h4><i class="color-social-icon fi-social-google-plus" id= "google" alt="Google+"></i></a>
+            <div class="w-col w-col-4 social-link-dec"><a class="w-inline-block social-link-block" href="https://www.facebook.com/pages/A-Barber-Shop/285800824854910" target="_blank"><h4 class="social-name">Google+:</h4><i class="color-social-icon fi-social-google-plus" id= "google" alt="Google+"></i></a>
             </div>
           </div>
         </div>
